Fixing hero banner text alignment

--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -39,7 +39,7 @@
       height: 100%
       margin: auto
       position: relative
-      top: 25%
+      top: 200px
 
     @media (min-width: 1800px)
 
@@ -52,10 +52,9 @@
         font-size: 1.2vw
         width: 45vw
 
-    @media (min-width: 1400px)
-
+    @media (max-width: 1440px)
       .title-container
-        top: 10vw
+        top: 8vh
 
   // SYNTHS
 
